<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="layout.fxFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/imagezxbj">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx01"/>
            <TextView
                android:id="@+id/Pyq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="朋友圈"
                android:textSize="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#C0C0C0"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx04"/>
            <TextView
                android:id="@+id/Kyk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kyk"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx05"/>
            <TextView
                android:id="@+id/Sys"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sys"
                android:textSize="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#C0C0C0"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/image_fx_yy"
                android:layout_marginTop="5dp"/>
            <TextView
                android:id="@+id/Yinyue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yinyue"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx06"/>
            <TextView
                android:id="@+id/fujin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fj"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#C0C0C0"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx07"/>
            <TextView
                android:id="@+id/gouwu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gw"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="#C0C0C0"
            android:layout_marginTop="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_fx08"/>
            <TextView
                android:id="@+id/youxi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yx"
                android:textSize="25dp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
